changed forms to 16px to prevent zoom on iOS

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -89,4 +89,5 @@ form input {
   color: var(--form-text-color);
   border-style: 1px solid;
   border-radius: 2px;
+  font-size: 16px;
 }
